Fix some bugs, update sample file

--- a/sample.org
+++ b/sample.org
@@ -12,6 +12,7 @@ The long row of buttons at the bottom is called the "action drawer".
 This header has a few TODO items as subheaders.
 *** TODO Learn how to use TODOs in org-web
 With this header selected, tap the checkmark button in the action drawer. Tap it again, and then again again!
+**** There's also a setting once you're signed in to enable tapping on the TODO label itself to advance the todo state. Its off by default because I thought the behavior would be confusing unless explained, but I recommend turning it on!
 *** DONE Check out org-web
 *** START Investigate custom TODO states
 org-web also supports [[http://orgmode.org/manual/Workflow-states.html#Workflow-states][custom todo states]] (if declared at the top of the file). Tap the checkmark button a few times with this header selected.
@@ -44,10 +45,13 @@ The first time you push changes from org-web back up to Dropbox, org-web will ma
 You don't log in to org-web directly because org-web doesn't have a back end - it operates completely client side using Dropbox's wonderful Javascript SDK. This also means I'm not storing your Dropbox auth tokens in a database somewhere :)
 * Future plans
 org-web is currently pretty usable for simple tasks, but there's a lot more to do. Here are a few of the things on the list:
-** More first-class support for org features like tags and timestamps
-** Better routing
+** More first-class support for org features like tags, timestamps, cookies, checklists, and tables
+** Routing and back/forward button support
 ** Search
 ** Support for other sync backends in addition to Dropbox
 ** Ability to create new files
 ** Archiving
+** A backend API for use in your own apps/scripts/IFTTT/Alexa Skills/etc.
+** A new color scheme, because the current one is kinda bumming me out
+** Offline support (Safari on iOS finally supports service workers!)
 ** Ability to Tweet a header directly from org-web (just kidding)
