--- a/whats_new.org
+++ b/whats_new.org
@@ -1,3 +1,7 @@
+* July 31st, 2018
+** Finished a complete rewrite to use more modern tooling and best practices
+*** Achieved almost complete parity with the original version, minus a couple features that weren't used often. Please let me know if those features were important to you (or if you notice any bugs) by [[https://github.com/DanielDe/org-web/issues/new][creating an issue]].
+** More features coming soon!
 * July 4th, 2017
 ** Fixed bug with preserving header openness state across reloads
 * June 3rd, 2017
