--- a/whats_new.org
+++ b/whats_new.org
@@ -1,3 +1,5 @@
+* August 1st, 2018
+** Added routing (and therefore back/forward button support)
 * July 31st, 2018 (afternoon)
 ** Implemented a "Focus" button - see the sample file for details.
 ** Other minor niceties and bug fixes.
