Add last initials to sample file per the request of one of the Sarahs

--- a/sample.org
+++ b/sample.org
@@ -45,13 +45,13 @@ Try playing around with this one by first clicking on a cell:
 |----------+-----+-----------------+----------+--------------|
 | Eloise   |   3 |             5.1 | Erin     |           15 |
 |----------+-----+-----------------+----------+--------------|
-| Starla   |  15 |              40 | Sarah    |           15 |
+| Starla   |  15 |              40 | Sarah S  |           15 |
 |----------+-----+-----------------+----------+--------------|
-| Rex      |  15 |              45 | Sarah    |           15 |
+| Rex      |  15 |              45 | Sarah S  |           15 |
 |----------+-----+-----------------+----------+--------------|
 | Maz      |   1 |              55 | Brittany |           15 |
 |----------+-----+-----------------+----------+--------------|
-| Clooney  | 0.1 |             4.8 | Sarah    |           15 |
+| Clooney  | 0.1 |             4.8 | Sarah R  |           15 |
 |----------+-----+-----------------+----------+--------------|
 | Murphy   | 0.5 |              25 | Jordan   |           15 |
 ** New action drawer items
