--- a/whats_new.org
+++ b/whats_new.org
@@ -1,3 +1,5 @@
+* August 28th, 2018
+** Capture templates are now reorderable (just drag and drop!)
 * August 23rd, 2018
 ** Added native support for cookies like [1/2] and [50%]
 *** TODO Sample todo
