--- a/changelog.org
+++ b/changelog.org
@@ -2,6 +2,7 @@
 ** You can now swipe on headers to trigger common actions:
 *** Swipe right to advance the todo state
 *** Swipe left to remove the header
+*** This only works on touchscreen devices
 * August 28th, 2018
 ** Capture templates are now reorderable (just drag and drop!)
 * August 23rd, 2018
