--- a/sample.org
+++ b/sample.org
@@ -13,7 +13,7 @@ This header has a few TODO items as subheaders.
 *** TODO Learn how to use TODOs in org-web
 With this header selected, tap the checkmark button in the action drawer. Tap it again, and then again again!
 **** There's also a setting once you're signed in to enable tapping on the TODO label itself to advance the todo state. Its off by default because I thought the behavior would be confusing unless explained, but I recommend turning it on!
-*** TODO Learn how to swipe on headers
+*** TODO Learn how to swipe on headers (touchscreen devices only)
 **** You can also advance the todo state by swiping right on the header (until you see the background turn green!)
 **** You can remove a header by swiping left on it
 *** DONE Check out org-web
