--- a/sample.org
+++ b/sample.org
@@ -32,13 +32,14 @@ The next two buttons in the action drawer edit the header and description respec
 ** Focusing
 *** The next button "focuses" on a header, hiding all others and promoting it to the top level.
 *** This is purely visual - your org file isn't affected under the hood. Press the button again to "unfocus".
-** Undoing
-*** The next button is Undo. This works just like Emacs-style undo in that your history is completely linear and you can "undo undos".
 ** Syncing
 *** The upload button pushes your changes up to Dropbox
 *** The download button pulls down the latest version of the file from Dropbox
 *** Neither of those buttons are enabled in this demo :)
 *** On the settings screen (gear icon in the upper right hand corner when signed in), you can enable "Live sync", which will push changes up to Dropbox as soon as you make them
+** Undoing
+*** The undo button will appear up in the header bar when you're signed in (it's not enabled in this sample).
+*** This works just like Emacs-style undo: your history is completely linear and you can "undo undos".
 * Tables
 org-web has native support for viewing and editing tables.
 
