--- a/README.org
+++ b/README.org
@@ -42,3 +42,17 @@ SAMPLE_FILE_CONTENTS=$(python -c "import json; print(json.dumps(open('./sample.o
 To test against your actual Dropbox, you'll need to create a ~.env~ file by copying ~.env.sample~ to just ~.env~.
 
 Note that this will only work if you're running the app on ~http://localhost:3000~.
+** Thanks
+org-web is built on the shoulders of giants. These are some packages I rely on that I think are absolutely fantastic:
+
+- ~[[https://github.JedWatson/classnames][JedWatson/classnames]]~
+- ~[[https://github.atlassian/react-beautiful-dnd][atlassian/react-beautiful-dnd]]~
+- ~[[https://github.motdotla/dotenv#readme][motdotla/dotenv]]~
+- ~[[https://github.facebook/immutable-js][facebook/immutable-js]]~
+- ~[[https://github.lodash/lodash][lodash/lodash]]~
+- ~[[https://github.facebook/create-react-app][facebook/create-react-app]]~
+- ~[[https://github.nkbt/react-collapse][nkbt/react-collapse]]~
+- ~[[https://github.greena13/react-hotkeys][greena13/react-hotkeys]]~
+- ~[[https://github.chenglou/react-motion][chenglou/react-motion]]~
+- ~[[https://github.reduxjs/redux][reduxjs/redux]]~
+- ~[[https://github.ReactTraining/react-router][ReactTraining/react-router]]~
