--- a/sample.org
+++ b/sample.org
@@ -21,6 +21,19 @@ org-web also supports [[http://orgmode.org/manual/Workflow-states.html#Workflow-
 Note that when the cycle restarts, it defaults to the first set of todo states. Manually edit the header to get back to a different todo state cycle (more on editing headers below!)
 ** Editing headers
 When you select a header the "header action drawer" appears. The first two buttons in this drawer edit the header and description respectively. Try editing this header.
+** Tags
+The next button in the header action drawer will bring up the tag editor.
+
+This editor lets you add, modify, and reorder tags, as well as giving you easy access to all tags in the file.
+
+Try it out on these headers:
+*** Dogs:
+**** Eloise                                         :cute:middleaged:tiny:
+**** Clooney                                             :cute:young:tiny:
+**** Murphy                                             :cute:young:small:
+**** Starla                                              :cute:old:medium:
+**** Rex                                                 :cute:old:medium:
+**** Maz                                           :cute:middleaged:large:
 ** Focusing
 The next button in the header action drawer "focuses" on a header, hiding all others and promoting it to the top level. Press the button again to "unfocus".
 
